--- a/CoLearn/Info.plist
+++ b/CoLearn/Info.plist
@@ -85,5 +85,9 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>facetime</string>
+    </array>
 </dict>
 </plist>
